[gd_scene load_steps=5 format=3 uid="uid://d4dhr42a1mqo6"]

[ext_resource type="Script" path="res://menu.gd" id="1_ift6h"]
[ext_resource type="Script" path="res://GridOoch.gd" id="2_c15v4"]
[ext_resource type="PackedScene" uid="uid://d2lpf1ry7m5up" path="res://tile_select.tscn" id="4_5duw6"]
[ext_resource type="Script" path="res://label_notification.gd" id="4_5s007"]

[node name="Menu" type="Control" groups=["MainMenu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ift6h")

[node name="FileDialogSave" type="FileDialog" parent="."]
title = "Save Map File"
initial_position = 2
size = Vector2i(500, 400)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.json")

[node name="FileDialogLoad" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json")

[node name="VBoxMenu" type="VBoxContainer" parent="."]
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxFile" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonNew" type="Button" parent="VBoxMenu/HBoxFile"]
layout_mode = 2
text = "New Level"

[node name="ButtonLoad" type="Button" parent="VBoxMenu/HBoxFile"]
layout_mode = 2
text = "Load Level"

[node name="ButtonSave" type="Button" parent="VBoxMenu/HBoxFile"]
layout_mode = 2
text = "Save Level"

[node name="LineEditMapName" type="LineEdit" parent="VBoxMenu/HBoxFile"]
layout_mode = 2
focus_mode = 1
text = "Map Default Name"
placeholder_text = "Map Name"
expand_to_text_length = true
caret_blink = true

[node name="HBoxMapInfo" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="LineEditMapBattleBack" type="LineEdit" parent="VBoxMenu/HBoxMapInfo"]
layout_mode = 2
placeholder_text = "Battle BG Sprite"
expand_to_text_length = true

[node name="Label" type="Label" parent="VBoxMenu/HBoxMapInfo"]
layout_mode = 2
text = "Grid Opacity: "

[node name="HSliderGridAlpha" type="HSlider" parent="VBoxMenu/HBoxMapInfo"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
value = 10.0
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleTile" type="CheckBox" parent="VBoxMenu/HBoxContainer"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonMapBrush" type="Button" parent="VBoxMenu/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 1"
text = "Paint Tiles"

[node name="HBoxEvent" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleEvent" type="CheckBox" parent="VBoxMenu/HBoxEvent"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewEvent" type="Button" parent="VBoxMenu/HBoxEvent"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 2"
text = "New Event Trigger"

[node name="HBoxSpawnzone" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleSpawnzone" type="CheckBox" parent="VBoxMenu/HBoxSpawnzone"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewSpawnRegion" type="Button" parent="VBoxMenu/HBoxSpawnzone"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 3"
text = "New Spawn Area"

[node name="HBoxTransition" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleTransition" type="CheckBox" parent="VBoxMenu/HBoxTransition"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewTransition" type="Button" parent="VBoxMenu/HBoxTransition"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 4"
text = "New Transition"

[node name="HBoxSavePoint" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleSavePoint" type="CheckBox" parent="VBoxMenu/HBoxSavePoint"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewSavePoint" type="Button" parent="VBoxMenu/HBoxSavePoint"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 5"
text = "New Save Point"

[node name="HBoxShop" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleShop" type="CheckBox" parent="VBoxMenu/HBoxShop"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewShop" type="Button" parent="VBoxMenu/HBoxShop"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 6"
text = "New Shop"

[node name="HBoxNPC" type="HBoxContainer" parent="VBoxMenu"]
layout_mode = 2

[node name="ButtonVisibleNPC" type="CheckBox" parent="VBoxMenu/HBoxNPC"]
layout_mode = 2
tooltip_text = "Toggle Visible"
button_pressed = true

[node name="ButtonNewNPC" type="Button" parent="VBoxMenu/HBoxNPC"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Keybind: 7"
text = "New NPC"

[node name="GridOoch" type="GridContainer" parent="."]
visible = false
layout_direction = 2
layout_mode = 0
offset_left = 40.0
offset_top = 100.0
offset_right = 40.0
offset_bottom = 100.0
theme_override_constants/h_separation = 4
theme_override_constants/v_separation = 4
columns = 16
script = ExtResource("2_c15v4")

[node name="TileSelect" parent="." instance=ExtResource("4_5duw6")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 421.0
offset_top = 133.0
offset_right = 741.0
offset_bottom = 453.0
grow_horizontal = 1
grow_vertical = 1

[node name="TooltipsPaint" type="RichTextLabel" parent="."]
visible = false
layout_mode = 0
offset_left = 917.0
offset_right = 1152.0
offset_bottom = 121.0
text = "LMB					- Paint
LMB + Ctrl			- Fill
RMB					- Erase
RMB + Ctrl			- Select Tile
Escape				- Return"

[node name="MenuChildren" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="npcs" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="shops" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="events" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="transitions" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="save_points" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="spawn_zones" type="Control" parent="MenuChildren"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="LabelNotification" type="Label" parent="."]
layout_mode = 0
offset_left = 1074.0
offset_top = -1.0
offset_right = 1151.0
offset_bottom = 22.0
text = "File Saved"
script = ExtResource("4_5s007")

[node name="LabelMousePosition" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "0, 0"

[connection signal="file_selected" from="FileDialogSave" to="." method="_on_file_dialog_save_file_selected"]
[connection signal="file_selected" from="FileDialogLoad" to="." method="_on_file_dialog_load_file_selected"]
[connection signal="pressed" from="VBoxMenu/HBoxFile/ButtonNew" to="." method="_on_button_new_pressed"]
[connection signal="pressed" from="VBoxMenu/HBoxFile/ButtonLoad" to="." method="_on_button_load_pressed"]
[connection signal="pressed" from="VBoxMenu/HBoxFile/ButtonSave" to="." method="_on_button_save_pressed"]
[connection signal="text_changed" from="VBoxMenu/HBoxFile/LineEditMapName" to="." method="_on_line_edit_map_name_text_changed"]
[connection signal="text_changed" from="VBoxMenu/HBoxMapInfo/LineEditMapBattleBack" to="." method="_on_line_edit_map_battle_back_text_changed"]
[connection signal="value_changed" from="VBoxMenu/HBoxMapInfo/HSliderGridAlpha" to="." method="_on_h_slider_grid_alpha_value_changed"]
[connection signal="toggled" from="VBoxMenu/HBoxContainer/ButtonVisibleTile" to="." method="_on_button_visible_tile_toggled"]
[connection signal="pressed" from="VBoxMenu/HBoxContainer/ButtonMapBrush" to="." method="_on_button_map_brush_pressed"]
[connection signal="toggled" from="VBoxMenu/HBoxEvent/ButtonVisibleEvent" to="." method="_on_button_visible_event_toggled"]
[connection signal="pressed" from="VBoxMenu/HBoxEvent/ButtonNewEvent" to="." method="_on_button_new_event_pressed"]
[connection signal="toggled" from="VBoxMenu/HBoxSpawnzone/ButtonVisibleSpawnzone" to="." method="_on_button_visible_spawnzone_toggled"]
[connection signal="pressed" from="VBoxMenu/HBoxSpawnzone/ButtonNewSpawnRegion" to="." method="_on_button_new_spawn_region_pressed"]
[connection signal="toggled" from="VBoxMenu/HBoxTransition/ButtonVisibleTransition" to="." method="_on_button_visible_transition_toggled"]
[connection signal="button_down" from="VBoxMenu/HBoxTransition/ButtonNewTransition" to="." method="_on_button_new_transition_button_down"]
[connection signal="pressed" from="VBoxMenu/HBoxTransition/ButtonNewTransition" to="." method="_on_button_new_transition_pressed"]
[connection signal="toggled" from="VBoxMenu/HBoxSavePoint/ButtonVisibleSavePoint" to="." method="_on_button_visible_save_point_toggled"]
[connection signal="button_down" from="VBoxMenu/HBoxSavePoint/ButtonNewSavePoint" to="." method="_on_button_new_save_point_button_down"]
[connection signal="toggled" from="VBoxMenu/HBoxShop/ButtonVisibleShop" to="." method="_on_button_visible_shop_toggled"]
[connection signal="button_down" from="VBoxMenu/HBoxShop/ButtonNewShop" to="." method="_on_button_new_shop_button_down"]
[connection signal="toggled" from="VBoxMenu/HBoxNPC/ButtonVisibleNPC" to="." method="_on_button_visible_npc_toggled"]
[connection signal="button_down" from="VBoxMenu/HBoxNPC/ButtonNewNPC" to="." method="_on_button_new_npc_button_down"]
[connection signal="pressed" from="VBoxMenu/HBoxNPC/ButtonNewNPC" to="." method="_on_button_new_npc_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
